--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 </div>
             </div>
             <div class="splash-col2">
-                <img class="wb-image" src="images/wbag.webp" />
+                <img class="wb-image" src="images/wbag.webp?v=1" />
             </div>
         </div>
     </div>
