--- a/supply-hiring-rental-services-of-proof-load-testing-water-bag-water-weight-test-weights-dynamometer-load-cell.html
+++ b/supply-hiring-rental-services-of-proof-load-testing-water-bag-water-weight-test-weights-dynamometer-load-cell.html
@@ -408,7 +408,7 @@
         <div class="splash-data">
             <div class="splash-col1">
                 <div class="logo">
-                    <a href="index.html"><img class="logoimg" src="images/logo.svg" /></a>
+                    <a href="https://www.eiwaasaudi.com/"><img class="logoimg" src="images/logo.svg" /></a>
                 </div>
                 <div class="caption" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"
                     data-aos-offset="0">
@@ -1575,15 +1575,15 @@
             if (ton > 50 && period > 15) {
                 loader.hideloaderinside('.mobilize-view');
                 Swal.fire(
-                            'First stage of approval have been completed',
-                            'Please contact the sales representative for more details and final approval.',
+                            'Free Mobilization',
+                            'Available',
                             'success'
                           )     
             } else {
                 loader.hideloaderinside('.mobilize-view');
                 Swal.fire(
-                            'Sorry',
-                            'Free Mobilization not available',
+                            'First stage of approval have been completed',
+                            'Please contact the sales representative for more details and final approval.',
                             'warning'
                           )   
 
