--- a/faq.html
+++ b/faq.html
@@ -2427,15 +2427,15 @@
             if (ton > 50 && period > 15) {
                 loader.hideloaderinside('.mobilize-view');
                 Swal.fire(
-                            'First stage of approval have been completed',
-                            'Please contact the sales representative for more details and final approval.',
+                            'Free Mobilization',
+                            'Available',
                             'success'
                           )     
             } else {
                 loader.hideloaderinside('.mobilize-view');
                 Swal.fire(
-                            'Sorry',
-                            'Free Mobilization not available',
+                            'First stage of approval have been completed',
+                            'Please contact the sales representative for more details and final approval.',
                             'warning'
                           )   
 
